--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -146,7 +146,16 @@ form button{
 
 .todoactions{
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
+}
+
+/* for toggle todo actions */
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
 }
 
 
