--- a/src/components/signup/Signup.css
+++ b/src/components/signup/Signup.css
@@ -65,3 +65,10 @@ nav img{
   width: 100%;
   object-fit: contain;
 }
+
+@media only screen and (max-width: 600px) {
+
+  .main{
+    flex-direction: column;
+  }
+}
